// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> expect to render 1`] = `
<div
  styleName="TextInput"
>
  <input
    onChange={[Function]}
    placeholder="Hello"
    styleName="TextInput__Input TextInput__Input--clear"
    value="http://link.com"
  />
  <i
    aria-hidden="true"
    className="fa fa-times-circle"
    onClick={[Function]}
    styleName="TextInput__Clear"
  />
</div>
`;

exports[`<TextInput /> expect to render without clear button when disabled 1`] = `
<div
  styleName="TextInput"
>
  <input
    onChange={[Function]}
    styleName="TextInput__Input"
    value="http://link.com"
  />
</div>
`;

exports[`<TextInput /> expect to render without clear button when value is empty 1`] = `
<div
  styleName="TextInput"
>
  <input
    onChange={[Function]}
    styleName="TextInput__Input TextInput__Input--clear"
    value=""
  />
</div>
`;
